<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JamJam</string>


    <string name="textview1">일주일에 몇 번 운동 할 계획인가요?</string>
    <string name="Textview1tail">주 3일 이상 운동을 추천합니다.</string>
    <string name="RB1">7일</string>
    <string name="RB2">5일 이상</string>
    <string name="RB3">3일 이상</string>
    <string name="RB4">1~2일</string>
    <string name="TextView2">하루에 몇 분 운동 할 계획인가요?</string>
    <string name="RB5">30분 이상</string>
    <string name="RB6">20분 이상</string>
    <string name="RB7">10분 이상</string>
    <string name="RB8">미정_꾸준히</string>
    <string name="next">next</string>


    <string name="imageView_main">imageView_main</string>
    <string name="mainTextNumber1">mainTextNum1</string>
    <string name="mainTextNumber2">mainTextNum2</string>
    <string name="mainTextNumber3">mainTextNum3</string>
    <string name="mainTextNumber4">mainTextNum4</string>
    <string name="mainTextNumber5">mainTextNum5</string>

    <string name="editTextNumber1">first</string>
    <string name="editTextNumber2">second</string>
    <string name="editTextNumber3">third</string>
    <string name="editTextNumber4">fourth</string>
    <string name="editTextNumber5">fifth</string>
    <string name="textView1">default is 0step</string>
    <string name="textView2">default is 0</string>
    <string name="RECORD">Record</string>


    <string name="restart">restart</string>
    <string name="New">New</string>
    <string name="Auto">Auto</string>
    <string name="Passitive">Passitive</string>
    <string name="Train">Train</string>
    <string name="Textbox">-------모드선택-------</string>
    <string name="button1" tools:keep="@string/button1">Auto</string>
    <string name="button2">Passitive</string>
    <string name="button3">Train</string>
    <string name="content" tools:keep="@string/content">content</string>
    <string name="Back">Back</string>


    <string name="title">recycler_title</string>
    <string name="recycler_content">recycler_content</string>


    <string name="train_explain">Start~Stop시 횟수, 목표치, 가동시간</string>
    <string name="Button">Start/Stop</string>
    <string name="autotextview">세부단계는 0입니다.</string>



</resources>