<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="#455A64"
            android:textSize="11sp"
            app:backgroundTint="#DCD086"
            tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />

        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"

            android:layout_marginRight="10dp"
            android:onClick="Newhand"

            android:text="@string/New"
            android:textAllCaps="false"
            android:textColor="#455A64"
            android:textSize="11sp"

            app:backgroundTint="#DCD086"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="470dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/Auto_btn"
            android:layout_width="358dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="Auto_btnClicked"
            android:text="@string/Auto"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:backgroundTint="#5562AC"
            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/Passitive_btn"
            android:layout_width="358dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"

            android:onClick="Passitive_btnClicked"
            android:text="@string/Passitive"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:backgroundTint="#5562AC"
            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/Train_btn"
            android:layout_width="358dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="Train_btnClicked"
            android:text="@string/Train"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:backgroundTint="#5562AC"

            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/Textbox"
            android:textColor="#33364C"
            android:textSize="30sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="129dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/selector_button"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/button2"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_text" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="129dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/selector_button"
                    android:button="@null"
                    android:text="@string/button2"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_text" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="129dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/selector_button"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:button="@null"
                    android:text="@string/button3"
                    android:textAlignment="center"
                    android:textColor="@drawable/selector_text"
                    />
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="15dp"
            android:onClick="graphclick"
            android:text="@string/RECORD"
            app:backgroundTint="#DCD086"
            tools:ignore="MissingConstraints,UsingOnClickInXml,TextContrastCheck" />

    </LinearLayout>


</LinearLayout>
